@@ -93,6 +93,8 @@ Version 1.13.0-dev:
    * Autogenerate help pages for all eras and factions.
    * Help pages for a faction autogenerates a list of races and alignments that appear in that faction.
    * Make nice help descriptions for the default factions (using content from the wiki).
+   * Align unit overlays to the sprite rather than the occupied hex.
+
 
 Version 1.11.11:
  * Campaigns:
