@@ -250,6 +250,9 @@ void unit_drawer::redraw_unit (const unit & u) const
 #endif
 	if(draw_bars) {
 		const image::locator* orb_img = NULL;
+		const surface unit_img = image::get_image(u.absolute_image());
+		const int xoff = (hex_size - unit_img->w)/2;
+		const int yoff = (hex_size - unit_img->h)/2;
 		/*static*/ const image::locator partmoved_orb(game_config::images::orb + "~RC(magenta>" +
 						preferences::partial_color() + ")"  );
 		/*static*/ const image::locator moved_orb(game_config::images::orb + "~RC(magenta>" +
@@ -296,7 +299,7 @@ void unit_drawer::redraw_unit (const unit & u) const
 		if (orb_img != NULL) {
 			surface orb(image::get_image(*orb_img,image::SCALED_TO_ZOOM));
 			disp.drawing_buffer_add(display::LAYER_UNIT_BAR,
-				loc, xsrc, ysrc +adjusted_params.y, orb);
+				loc, xsrc + xoff, ysrc + adjusted_params.y + yoff, orb);
 		}
 
 		double unit_energy = 0.0;
@@ -308,7 +311,7 @@ void unit_drawer::redraw_unit (const unit & u) const
 
 		const fixed_t bar_alpha = (loc == mouse_hex || loc == sel_hex) ? ftofxp(1.0): ftofxp(0.8);
 
-		draw_bar(*energy_file, xsrc+bar_shift, ysrc +adjusted_params.y,
+		draw_bar(*energy_file, xsrc+bar_shift+xoff, ysrc + adjusted_params.y + yoff,
 			loc, hp_bar_height, unit_energy,hp_color, bar_alpha);
 
 		if(experience > 0 && can_advance) {
@@ -316,7 +319,7 @@ void unit_drawer::redraw_unit (const unit & u) const
 
 			const int xp_bar_height = static_cast<int>(max_experience * u.xp_bar_scaling() / std::max<int>(u.level(),1));
 
-			draw_bar(*energy_file, xsrc, ysrc +adjusted_params.y,
+			draw_bar(*energy_file, xsrc + xoff, ysrc + adjusted_params.y + yoff,
 				loc, xp_bar_height, filled, xp_color, bar_alpha);
 		}
 
@@ -327,7 +330,7 @@ void unit_drawer::redraw_unit (const unit & u) const
 				//	crown = adjust_surface_alpha(crown, bar_alpha);
 				//}
 				disp.drawing_buffer_add(display::LAYER_UNIT_BAR,
-					loc, xsrc, ysrc +adjusted_params.y, crown);
+					loc, xsrc + xoff, ysrc +adjusted_params.y + yoff, crown);
 			}
 		}
 
@@ -336,7 +339,7 @@ void unit_drawer::redraw_unit (const unit & u) const
 			const sdl::timage ov_img(image::get_texture(*ov, image::SCALED_TO_ZOOM));
 			if(!ov_img.null()) {
 				disp.drawing_buffer_add(display::LAYER_UNIT_BAR,
-					loc, xsrc, ysrc +adjusted_params.y, ov_img);
+					loc, xsrc + xoff, ysrc + adjusted_params.y + yoff, ov_img);
 			}
 #else
 			const surface ov_img(image::get_image(*ov, image::SCALED_TO_ZOOM));
