@@ -296,6 +296,7 @@ Version 1.13.0-dev:
    * Added automatic help entries for all eras, fulfilling Feature Request #22107
    * Fixed in-game help descriptions of default factions, using content from wiki
    * Added automatically generated lists of races and alignments to the descriptions of factions
+   * Align unit overlays to the sprite rather than the occupied hex.
 
 Version 1.11.11:
  * Add-ons server:
